# Generated by Django 4.2.7 on 2025-07-26 14:50

from django.conf import settings
import django.contrib.postgres.fields
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='Application',
            fields=[
                ('application_id', models.AutoField(primary_key=True, serialize=False)),
                ('current_stage', models.CharField(blank=True, max_length=100, null=True)),
                ('status', models.CharField(choices=[('New', 'New'), ('Interview', 'Interview'), ('Rejected', 'Rejected'), ('Hired', 'Hired'), ('On Hold', 'On Hold'), ('Withdrawn', 'Withdrawn')], default='New', max_length=20)),
                ('applied_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'db_table': 'applications',
                'ordering': ['-applied_at'],
            },
        ),
        migrations.CreateModel(
            name='Candidate',
            fields=[
                ('candidate_id', models.AutoField(primary_key=True, serialize=False)),
                ('first_name', models.CharField(max_length=100)),
                ('last_name', models.CharField(max_length=100)),
                ('email', models.EmailField(max_length=254, unique=True)),
                ('phone', models.CharField(blank=True, max_length=20, null=True)),
                ('resume_file_path', models.CharField(blank=True, max_length=500, null=True)),
                ('parsed_cv_data', models.JSONField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'db_table': 'candidates',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Job',
            fields=[
                ('job_id', models.AutoField(primary_key=True, serialize=False)),
                ('title', models.CharField(max_length=200)),
                ('description', models.TextField()),
                ('location', models.CharField(max_length=200)),
                ('status', models.CharField(choices=[('Active', 'Active'), ('Archived', 'Archived')], default='Active', max_length=20)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('created_by', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='created_jobs', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'jobs',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='JobDescription',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('company_name', models.CharField(max_length=255)),
                ('url_of_site', models.URLField()),
                ('company_description', models.TextField()),
                ('company_logo', models.URLField(blank=True)),
                ('job_title', models.CharField(max_length=255)),
                ('country', models.CharField(max_length=100)),
                ('city', models.CharField(max_length=100)),
                ('isRemote', models.BooleanField()),
                ('type_of_contract', models.CharField(max_length=100)),
                ('job_description', models.TextField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('banner_image', models.ImageField(blank=True, null=True, upload_to='banners/')),
                ('contract_length', models.PositiveIntegerField(blank=True, help_text='Contract length in days', null=True)),
                ('work_time', models.CharField(choices=[('full-time', 'Full-time'), ('part-time', 'Part-time'), ('contract', 'Contract Basis'), ('internship', 'Internship'), ('freelance', 'Freelance')], default='full-time', max_length=50)),
                ('candidate_profile', models.TextField(blank=True, help_text='Expected qualifications, experience, and candidate profile')),
                ('visibility_of_job', models.CharField(choices=[('public', 'Public'), ('internal_distribution', 'Internal Distribution'), ('restricted', 'Restricted')], default='public', max_length=50)),
                ('department', models.CharField(blank=True, max_length=200)),
                ('qualification_level', models.CharField(choices=[('entry', 'Entry Level'), ('junior', 'Junior Level'), ('mid', 'Mid Level'), ('senior', 'Senior Level'), ('lead', 'Lead Level'), ('executive', 'Executive Level')], default='mid', max_length=50)),
            ],
            options={
                'db_table': 'job_descriptions',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Task',
            fields=[
                ('task_id', models.AutoField(primary_key=True, serialize=False)),
                ('description', models.TextField()),
                ('due_date', models.DateTimeField(blank=True, null=True)),
                ('completed', models.BooleanField(default=False)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='tasks', to='api.application')),
                ('assigned_to_user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='assigned_tasks', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'tasks',
                'ordering': ['due_date', '-task_id'],
            },
        ),
        migrations.CreateModel(
            name='Note',
            fields=[
                ('note_id', models.AutoField(primary_key=True, serialize=False)),
                ('content', models.TextField()),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notes', to='api.application')),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='notes', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'notes',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='Interview',
            fields=[
                ('interview_id', models.AutoField(primary_key=True, serialize=False)),
                ('scheduled_time', models.DateTimeField()),
                ('calendar_event_id', models.CharField(blank=True, max_length=200, null=True)),
                ('panel_user_ids', django.contrib.postgres.fields.ArrayField(base_field=models.IntegerField(), blank=True, help_text='Array of user IDs for interview panel', null=True, size=10)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='interviews', to='api.application')),
            ],
            options={
                'db_table': 'interviews',
                'ordering': ['scheduled_time'],
            },
        ),
        migrations.CreateModel(
            name='Email',
            fields=[
                ('email_id', models.AutoField(primary_key=True, serialize=False)),
                ('recipient_email', models.EmailField(max_length=254)),
                ('subject', models.CharField(max_length=200)),
                ('content', models.TextField()),
                ('sent_at', models.DateTimeField(auto_now_add=True)),
                ('application', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='emails', to='api.application')),
                ('sender_user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='sent_emails', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'db_table': 'emails',
                'ordering': ['-sent_at'],
            },
        ),
        migrations.AddField(
            model_name='application',
            name='candidate',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='applications', to='api.candidate'),
        ),
        migrations.AddField(
            model_name='application',
            name='job',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='applications', to='api.job'),
        ),
        migrations.CreateModel(
            name='PipelineStage',
            fields=[
                ('stage_id', models.AutoField(primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=100)),
                ('order', models.PositiveIntegerField()),
                ('job', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='pipeline_stages', to='api.job')),
            ],
            options={
                'db_table': 'pipeline_stages',
                'ordering': ['job', 'order'],
                'unique_together': {('job', 'order')},
            },
        ),
        migrations.AlterUniqueTogether(
            name='application',
            unique_together={('job', 'candidate')},
        ),
    ]
