# Generated by Django 4.2.7 on 2025-07-23 07:50

from django.db import migrations, models
import django.utils.timezone


class Migration(migrations.Migration):

    dependencies = [
        ('api', '0001_initial'),
    ]

    operations = [
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('notification_id', models.AutoField(primary_key=True, serialize=False)),
                ('step_id', models.IntegerField(help_text='Foreign key reference to workflow step')),
                ('channel', models.CharField(choices=[('email', 'Email'), ('sms', 'SMS'), ('push', 'Push Notification'), ('in_app', 'In-App Notification')], default='email', max_length=20)),
                ('template_name', models.CharField(help_text='Name of the notification template', max_length=255)),
                ('trigger_on_entry', models.BooleanField(default=True, help_text='Whether to trigger notification when entering this step')),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'db_table': 'notifications',
                'ordering': ['step_id', '-created_at'],
            },
        ),
        migrations.RenameField(
            model_name='task',
            old_name='assigned_to_user',
            new_name='assignee_id',
        ),
        migrations.RemoveField(
            model_name='task',
            name='application',
        ),
        migrations.RemoveField(
            model_name='task',
            name='completed',
        ),
        migrations.AddField(
            model_name='task',
            name='created_at',
            field=models.DateTimeField(auto_now_add=True, default=django.utils.timezone.now),
            preserve_default=False,
        ),
        migrations.AddField(
            model_name='task',
            name='status',
            field=models.CharField(choices=[('pending', 'Pending'), ('in_progress', 'In Progress'), ('completed', 'Completed'), ('cancelled', 'Cancelled')], default='pending', max_length=20),
        ),
        migrations.AddField(
            model_name='task',
            name='step_id',
            field=models.IntegerField(default=1, help_text='Foreign key reference to workflow step'),
            preserve_default=False,
        ),
        migrations.AddField(
            model_name='task',
            name='updated_at',
            field=models.DateTimeField(auto_now=True),
        ),
    ]
