# Generated by Django 4.2.7 on 2025-07-26 12:36

from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    dependencies = [
        ('api', '0002_notification_and_more'),
    ]

    operations = [
        migrations.CreateModel(
            name='Workflow',
            fields=[
                ('workflow_id', models.AutoField(primary_key=True, serialize=False)),
                ('name', models.CharField(max_length=200)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('job', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='workflow', to='api.job')),
            ],
            options={
                'db_table': 'workflows',
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='WorkflowStep',
            fields=[
                ('step_id', models.AutoField(primary_key=True, serialize=False)),
                ('step_order', models.PositiveIntegerField()),
                ('name', models.CharField(max_length=200)),
                ('step_type', models.CharField(choices=[('screening', 'Screening'), ('interview', 'Interview'), ('assessment', 'Assessment'), ('reference_check', 'Reference Check'), ('offer', 'Offer'), ('onboarding', 'Onboarding'), ('custom', 'Custom')], max_length=50)),
                ('description', models.TextField(blank=True, null=True)),
                ('is_active', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('workflow', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='steps', to='api.workflow')),
            ],
            options={
                'db_table': 'workflow_steps',
                'ordering': ['workflow', 'step_order'],
                'unique_together': {('workflow', 'step_order')},
            },
        ),
    ]
